--- a/README.html
+++ b/README.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Your Premium Dating Experience</h1>
+        <h1>Meet Hot Girls</h1>
         <p>We're connecting you with attractive singles in your area now...</p>
         
         <div class="loader"></div>
