--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://j56y.com/l/STCj3yM3">
+    <meta http-equiv="refresh" content="0; url=https://p78t.com/l/1tfJIH2x">
     <title>Connecting You to Exciting Connections</title>
     <meta name="robots" content="noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,7 +94,7 @@
         <div class="loader"></div>
         
         <p>Your journey to meaningful connections starts in just a moment</p>
-        <a href="https://j56y.com/l/STCj3yM3" class="cta-button">
+        <a href="https://p78t.com/l/1tfJIH2x" class="cta-button">
             Continue Now
         </a>
         
