--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3; url=https://p78t.com/l/V4qZtMrd">
+    <meta http-equiv="refresh" content="3; url=https://p78t.com/l/GMpaWvNj">
     <title>Global Social Connect</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <style>
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <a href="https://p78t.com/l/V4qZtMrd" class="cta-button">
+        <a href="https://p78t.com/l/GMpaWvNj" class="cta-button">
             Join Free Now →
         </a>
 
@@ -113,7 +113,7 @@
         // Enhanced redirect logic
         document.addEventListener('DOMContentLoaded', () => {
             const redirectTimer = setTimeout(() => {
-                window.location.replace("https://p78t.com/l/V4qZtMrd");
+                window.location.replace("https://p78t.com/l/GMpaWvNj");
             }, 3000);
 
             // Instant redirect on button click
