--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         
         <!-- 链接按钮 -->
         <div class="links">
-            <a href="https://y29v.com/l/0ZGawsyM" class="link-button" target="_blank">Explore Content</a>
+            <a href="https://h32k.site/l/OhSZ47gX" class="link-button" target="_blank">Explore Content</a>
         </div>
         
         <!-- 页脚 -->
@@ -214,3 +214,4 @@
     </script>
 </body>
 </html>
+
